ドキュメントモジュール仕様を更新。
- ページタイトルを、「コーディング規則」から「ドキュメントモジュール」に変更。
- ボックスモジュールのカテゴリを追加。(for Issue #37)
- サンプルコード中に、モジュール展開時に変更して良い箇所とどのように変更して良いかを示すサインを入れた。
-- {$text} = テキスト
-- {$int} = 数値
-- {$inline} = インライン要素
-- {$parts} = パーツモジュール
-- {$box} = ボックスモジュール
-- {$unit} = ユニットモジュール
-- {$href} = リンク先パス
-- {$anchor} = アンカー名
-- {$image} = 画像リソースのパス
-- {$JavaScriptCode} = JavaScriptコード
- .anchor_links にボーダーをつけた。

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -1,15 +1,15 @@
 
 <p>
-	このドキュメントは、コンテンツを構成するドキュメントモジュールの定義を含んだ、Pickles Framework が規定する標準のコーディング規則について説明します。<br />
+	このドキュメントは、Pickles Framework が規定する標準のドキュメントモジュールの定義や、コーディング規則について説明します。<br />
 </p>
 
 <?php
 	print( $px->theme()->autoindex() );
 ?>
 
-<h2>コーディング規則の設計方針</h2>
+<h2>設計方針</h2>
 <p>
-	このコーディング規則は、次の方針に基づいて設計されています。<br />
+	ドキュメントモジュールおよびコーディング規則は、次の方針に基づいて設計されます。<br />
 </p>
 <ul>
 	<li>少数(多くの場合1人)の管理者と、大勢のコンテンツ制作者との間の約束事であり、<strong>管理者が全体を効率よく管理できることを主目的として設計する</strong>。</li>
@@ -23,31 +23,6 @@
 <p>
 	ターゲットデバイスの種類については、意識しない(=<strong>マルチデバイスに対応できるように設計する</strong>)ものとします。<br />
 </p>
-
-<h2>共通ドキュメントモジュール</h2>
-
-<p>
-	ドキュメントモジュールは、構成要素単位で構造化されたHTMLとCSSのセットであり、サイト全体の管理者(=テーマの管理者)により定義され、コンテンツ個別の制作者に配布されるものです。<br />
-</p>
-<p>
-	ここで定義されるドキュメントモジュールは、サイト全体の管理者(=テーマの管理者)により、将来の環境や要件の変化を想定して設計されたものであり、コンテンツ制作者には、そのルールに従ってコンテンツを構築することが求められます。<br />
-</p>
-<p>
-	コンテンツ制作者は、ここに定義されていないドキュメントモジュールを独自に開発することができます(独自ドキュメントモジュール設計規則については<a href="#cont_contents_custom_modules">コンテンツ独自ドキュメントモジュールの定義</a>を参照)が、これは通常推奨されません。独自ドキュメントモジュールを多く開発すると、サイト全体のルールが次第に崩れてくる恐れがあり、管理効率が著しく低下するためです。極力、このドキュメントに定義された、管理者によって設計、提供されたドキュメントモジュールのみを使ってコンテンツを構築するようにしてください。<br />
-</p>
-
-
-<p>共通ドキュメントモジュールは、それぞれ<strong>ユニットモジュール</strong>、<strong>パーツモジュール</strong>、<strong>スタティックモジュール</strong>の3種類のグループに分類されます。</p>
-
-<dl>
-	<dt><a href="./units/">ユニットモジュール</a></dt>
-		<dd>ユニットモジュールは、水平貫通(コンテンツ領域に対して幅100%)の矩形ブロックで、上下に適切なマージンを与えられたモジュールです。パーツモジュールを内包する入れ物のような役割を果たします(ただし、ユニットモジュール内にユニットモジュールを配置することはできません)。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。</dd>
-	<dt><a href="./parts/">パーツモジュール</a></dt>
-		<dd>パーツモジュールは、ユニットモジュール内に入れ込んで使うことができます。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。スタティックモジュールと異なり、ある程度複雑な構造のパーツが含まれます。</dd>
-	<dt><a href="./statics/">スタティックモジュール</a></dt>
-		<dd>スタティックモジュールは、端末の状態(スクリーンの幅など)に影響されず、常に固定の効果を提供します。主に特に基本的でシンプルなショートハンド的なモジュールが含まれます。</dd>
-</dl>
-
 
 <h2>文字セットと改行コード</h2>
 
@@ -130,6 +105,33 @@
 	<li>特に頻繁に使用するクラス名には、省略形を用います。これは、タイプする機会が多くなるためミスタイプを防止することにつながること、頻繁に利用するため意味や効果を記憶しやすく、名前から判別しにくくても問題となりにくいことの2点からです。</li>
 	<li>頻繁に使うクラスでも、構造が複雑なモジュールには、フルスペルの名称が適しています。これは、モジュール集からコピー＆ペーストしてコーディングする運用が想定されるため、タイピングのコストやミスタイプのリスクが低いと考えられるためです。</li>
 </ul>
+
+<h2>共通ドキュメントモジュール</h2>
+
+<p>
+	ドキュメントモジュールは、構成要素単位で構造化されたHTMLとCSSのセットであり、サイト全体の管理者(=テーマの管理者)により定義され、コンテンツ個別の制作者に配布されるものです。<br />
+</p>
+<p>
+	ここで定義されるドキュメントモジュールは、サイト全体の管理者(=テーマの管理者)により、将来の環境や要件の変化を想定して設計されたものであり、コンテンツ制作者には、そのルールに従ってコンテンツを構築することが求められます。<br />
+</p>
+<p>
+	コンテンツ制作者は、ここに定義されていないドキュメントモジュールを独自に開発することができます(独自ドキュメントモジュール設計規則については<a href="#cont_contents_custom_modules">コンテンツ独自ドキュメントモジュールの定義</a>を参照)が、これは通常推奨されません。独自ドキュメントモジュールを多く開発すると、サイト全体のルールが次第に崩れてくる恐れがあり、管理効率が著しく低下するためです。極力、このドキュメントに定義された、管理者によって設計、提供されたドキュメントモジュールのみを使ってコンテンツを構築するようにしてください。<br />
+</p>
+
+<h3>ドキュメントモジュールの3つの分類</h3>
+<p>共通ドキュメントモジュールは、それぞれ<strong>ユニットモジュール</strong>、<strong>パーツモジュール</strong>、<strong>スタティックモジュール</strong>の3種類のグループに分類されます。</p>
+
+<dl>
+	<dt><a href="./units/">ユニットモジュール</a></dt>
+		<dd>ユニットモジュールは、水平貫通(コンテンツ領域に対して幅100%)の矩形ブロックで、上下に適切なマージンを与えられたモジュールです。パーツモジュールを内包する入れ物のような役割を果たします(ただし、ユニットモジュール内にユニットモジュールを配置することはできません)。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。</dd>
+	<dt><a href="./parts/">パーツモジュール</a></dt>
+		<dd>パーツモジュールは、ユニットモジュール内に入れ込んで使うことができます。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。スタティックモジュールと異なり、ある程度複雑な構造のパーツが含まれます。</dd>
+	<dt><a href="./statics/">スタティックモジュール</a></dt>
+		<dd>スタティックモジュールは、端末の状態(スクリーンの幅など)に影響されず、常に固定の効果を提供します。主に特に基本的でシンプルなショートハンド的なモジュールが含まれます。</dd>
+	<dt><a href="./box/">ボックスモジュール</a></dt>
+		<dd>ボックスモジュールは、箱型に囲われたビジュアルスタイルを持ち、前後の流れから独立した文脈に用います。ユニットモジュールに内包されることができ、ユニットモジュールを内包することもできる特殊なモジュール群です。</dd>
+</dl>
+
 
 <h2 id="cont_contents_custom_modules">コンテンツ独自モジュールを定義する場合の規則</h2>
 
