ドキュメントモジュールの文言修正。
- ボックスモジュールカテゴリの追加により、ドキュメントモジュールの種類が 3種類 から 4種類 に増えたことを受けた修正。

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -118,8 +118,8 @@
 	コンテンツ制作者は、ここに定義されていないドキュメントモジュールを独自に開発することができます(独自ドキュメントモジュール設計規則については<a href="#cont_contents_custom_modules">コンテンツ独自ドキュメントモジュールの定義</a>を参照)が、これは通常推奨されません。独自ドキュメントモジュールを多く開発すると、サイト全体のルールが次第に崩れてくる恐れがあり、管理効率が著しく低下するためです。極力、このドキュメントに定義された、管理者によって設計、提供されたドキュメントモジュールのみを使ってコンテンツを構築するようにしてください。<br />
 </p>
 
-<h3>ドキュメントモジュールの3つの分類</h3>
-<p>共通ドキュメントモジュールは、それぞれ<strong>ユニットモジュール</strong>、<strong>パーツモジュール</strong>、<strong>スタティックモジュール</strong>の3種類のグループに分類されます。</p>
+<h3>ドキュメントモジュールの4つの分類</h3>
+<p>共通ドキュメントモジュールは、それぞれ<strong>ユニットモジュール</strong>、<strong>パーツモジュール</strong>、<strong>スタティックモジュール</strong>、<strong>ボックスモジュール</strong>の4種類のグループに分類されます。</p>
 
 <dl>
 	<dt><a href="./units/">ユニットモジュール</a></dt>
