--- a/htdocs/_PX/themes/sample/popup.html
+++ b/htdocs/_PX/themes/sample/popup.html
@@ -26,7 +26,7 @@
 </div><!-- /.theme_header -->
 <div class="theme_middle">
 <div class="theme_column1">
-<h1><?php print t::h( $page_info['title_h1'] ); ?></h1>
+<h1><?php print t::text2html( $page_info['title_h1'] ); ?></h1>
 <div id="content" class="contents">
 
 <?php
