--- a/htdocs/_PX/themes/default/popup.html
+++ b/htdocs/_PX/themes/default/popup.html
@@ -30,7 +30,7 @@
 			</div><!-- /.header -->
 			<div class="middle">
 				<div class="column1">
-					<h1><?php print t::h( $page_info['title_h1'] ); ?></h1>
+					<h1><?php print t::text2html( $page_info['title_h1'] ); ?></h1>
 					<div id="content" class="contents">
 
 <?php
