$siteにメソッドを3つ追加。
- $site->is_page_in_breadcrumb() を追加。
- $site->get_page_id_by_path() を追加。
- $site->get_page_path_by_id() を追加。

--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -58,8 +58,8 @@
 <?php foreach( $local_bros_page_info as $local_page_id ){ ?>
 <?php $local_page_info = $px->site()->get_page_info($local_page_id); ?>
 <li><?php print '<a href="'.t::h( $px->theme()->href($local_page_info['path']) ).'"'.($local_page_info['id']==$page_info['id']?' class="current"':'').'>'.t::h($local_page_info['title_label']).'</a>'; ?>
-<?php if( $local_page_info['id']==$page_info['id'] ){ ?>
-<?php $local_children = $px->site()->get_children(); ?>
+<?php if( $px->site()->is_page_in_breadcrumb( $local_page_info['id'] ) ){ ?>
+<?php $local_children = $px->site()->get_children( $local_page_info['id'] ); ?>
 <?php if( count($local_children) ){ ?>
 <ul>
 <?php foreach( $local_children as $local_child_page_id ){ ?>
