--- a/htdocs/_PX/themes/sample/default.html
+++ b/htdocs/_PX/themes/sample/default.html
@@ -1,7 +1,9 @@
 <?php
 	//↓ $page_info にページの情報を格納しています。
 	//	 test::var_dump( $page_info ); で、変数の内容を確認できます。
-	$page_info = $this->px->site()->get_current_page_info();
+	$page_info = $px->site()->get_current_page_info();
+	$tmp_class_name = $px->load_pxtheme_class('/custom/funcs.php');
+	$obj_custom_theme = new $tmp_class_name($this->px);
 ?><!doctype html>
 <html>
 <head>
@@ -23,7 +25,7 @@
 <div class="theme_outline">
 <div class="theme_header">
 	<div class="logo"><a href="<?php print t::h( $px->theme()->href('') ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a></div>
-	<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
+	<div class="breadcrumb"><?php print $obj_custom_theme->mk_breadcrumb(); ?></div>
 </div><!-- /.theme_header -->
 <div class="theme_middle">
 <div class="theme_column1">
@@ -153,7 +155,7 @@
 </div><!-- /.theme_middle -->
 <div class="theme_footer">
 	<div class="right small">[<a href="#page_top">ページの先頭へ戻る</a>]</div>
-	<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
+	<div class="breadcrumb"><?php print $obj_custom_theme->mk_breadcrumb(); ?></div>
 	<div class="center">[<?php print $px->theme()->mk_link('/'); ?>]</div>
 </div><!-- /.theme_footer -->
 </div><!-- /.theme_outline -->
